--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
+    "copy-to-clipboard": "^3.3.3",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
     "next": "15.3.5",
